--- a/style.css
+++ b/style.css
@@ -1,9 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
   background-color: #EFEEE8;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+/* nav */
+#home_nav {
+  position: fixed;
+  width: 100%;
+  top: 0;
+}
+
+.nav--container {
+  display: flex;
+  justify-content: flex-end;
+  padding: 32px;
+}
+
+.nav_list {
+  display: flex;
+}
+
+.nav_link {
+  margin-left: 40px;
+}
+
+/* home */
+#home {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+
+.home_text--container {
+  position: absolute;
+  top: 50%;
+  left: 80px;
+  transform: translateY(-50%);
+}
+
+.home_title {
+  font-size: 48px;
+  font-weight: 300;
+}
+
+.home_para {
+  font-size: 24px;
+  font-weight: 200;
 }
