--- a/style.css
+++ b/style.css
@@ -64,3 +64,10 @@ a {
   font-size: 24px;
   font-weight: 200;
 }
+
+#logo--wrapper {
+  position: absolute;
+  right: 10%;
+  top: 50%;
+  transform: translateY(-50%);
+}
