--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ a {
   right: 18%;
   top: 30%;
   transform: translateY(-50%);
+  z-index: 40;
   animation: float 3s ease-in-out infinite;
 }
 
@@ -93,6 +94,16 @@ a {
   position: absolute;
   right: 25%;
   top: 30%;
+  z-index: 50;
+  animation: circle_float 3s ease-in-out infinite;
+}
+
+.home_circle--2 {
+  width: 50px;
+  position: absolute;
+  right: 30%;
+  top: 48%;
+  z-index: 1;
   animation: circle_float 3s ease-in-out infinite;
 }
 
@@ -103,6 +114,6 @@ a {
 
 @keyframes circle_float {
   0%,100% {transform: translateY(0px);}
-  50% {transform: translateY(-5px);}
+  50% {transform: translateY(15px);}
 
 }
