--- a/style.css
+++ b/style.css
@@ -245,6 +245,7 @@ h3 {
   border-bottom-left-radius: 50px;
   border-top-right-radius: 50px;
   transition: all 300ms ease;
+  margin-bottom: 120px;
 }
 
 .website_overlay {
@@ -260,4 +261,57 @@ h3 {
 .website--box:hover .website_overlay {
   transform: translateY(0);
   opacity: 0.8;
+}
+
+.website_info--container {
+  position: absolute;
+  bottom: 20%;
+  left: 32px;
+  color: #FFF;
+  opacity: 0;
+  transform: translateX(-500px);
+  transition: opacity 800ms ease, transform 800ms ease;
+}
+
+.year {
+  position: absolute;
+  bottom: 32px;
+  left: 32px;
+  color: #FFF;
+  font-weight: 200;
+  opacity: 0;
+  transform: translateX(-500px);
+  transition: opacity 800ms ease, transform 800ms ease;
+}
+
+.business_name {
+  font-size: 32px;
+  font-weight: 200;
+}
+
+.service {
+  font-weight: 200;
+  font-style: italic;
+}
+
+.learn_more--btn {
+  position: absolute;
+  background-color: #EFEEE8;
+  color: #000;
+  bottom: 24px;
+  right: 12px;
+  padding: 4px 32px;
+  border-radius: 50px;
+  font-size: 14px;
+  font-style: italic;
+  opacity: 0;
+  transform: translateX(100px);
+  transition: opacity 800ms ease, transform 800ms ease;
+}
+
+.website--box:hover .website_info--container,
+.website--box:hover .year,
+.website--box:hover .learn_more--btn {
+  opacity: 1;
+  transform: translateX(0);
 }
