--- a/style.css
+++ b/style.css
@@ -304,6 +304,7 @@ h3 {
   border-radius: 50px;
   font-size: 14px;
   font-style: italic;
+  font-weight: 200;
   opacity: 0;
   transform: translateX(100px);
   transition: opacity 800ms ease, transform 800ms ease;
