--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ h3 {
 }
 
 .footer_link {
-  font-size: 30px;
+  font-size: 24px;
   font-weight: 200;
   font-style: italic;
 }
@@ -346,10 +346,7 @@ h3 {
 }
 
 .tela_logo--footer {
-  width: 200px;
-  position: absolute;
-  right: 250px;
-  bottom: 75px;
+  width: 250px;
   animation: float 3s ease-in-out infinite;
 }
 
@@ -359,3 +356,25 @@ h3 {
   bottom: 5px;
   font-weight: 200;
 }
+
+.logo--container {
+  position: absolute;
+  background-color: #FFF;
+  border-radius: 100px;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer_logo {
+  width: 30px;
+  height: 30px;
+} 
+
+.tela_socials--container {
+  border: 1px solid red;
+  width: 100%;
+}
+
