--- a/style.css
+++ b/style.css
@@ -350,7 +350,6 @@ h3 {
 
 .tela_socials--container {
   position: relative;
-  border: 1px solid red;
   width: 100%;
 }
 
@@ -374,6 +373,11 @@ h3 {
 .linkedin--container {
   left: 100px;
   bottom: 50px;
+}
+
+.tiktok--container {
+  left: 200px;
+  top: 100px;
 }
 
 .footer_logo {
