--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ li {
 
 a {
   text-decoration: none;
-  color: black;
+  color: #000;
 }
 
 hr {
@@ -52,6 +52,7 @@ h3 {
   top: 0;
   z-index: 100;
   background-color: var(--background);
+  /* background-color: #192F41; */
   opacity: 0.9;
 }
 
@@ -114,8 +115,8 @@ h3 {
 
 #logo--wrapper {
   position: absolute;
-  right: 400px;
-  top: 30%;
+  right: 200px;
+  top: 25%;
   transform: translateY(-50%);
   z-index: 40;
   animation: float 3s ease-in-out infinite;
@@ -217,7 +218,7 @@ h3 {
   justify-content: space-between;
   border: none;
   border-bottom: 1px solid #000;
-  background-color: #EFEEE8;
+  background-color: var(--background);
   padding-bottom: 12px;
   transition: transform 400ms ease;
 }
@@ -300,7 +301,7 @@ h3 {
 
 .learn_more--btn {
   position: absolute;
-  background-color: #EFEEE8;
+  background-color: var(--background);
   color: #000;
   bottom: 24px;
   right: 12px;
