added overflow hidden to home page so that it does not get affected by the svg's

--- a/style.css
+++ b/style.css
@@ -74,12 +74,12 @@ a {
 }
 
 /* --header */
-
 .title--container {
   position: absolute;
   top: 50%;
   left: 24px;
   transform: translateY(-50%);
+  z-index: 2;
 }
 
 .tela_creation {
@@ -91,6 +91,31 @@ a {
 }
 
 /* circles_landing_page */
+#home {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+}
+
 .circle_1 {
-  
+  position: absolute;
+  right: -400px;
+  bottom: -100px;
+  width: 700px;
+  z-index: 1;
+}
+
+.circle_2 {
+  position: absolute;
+  right: 50px;
+  bottom: -200px;
+  width: 400px;
+}
+
+.circle_3 {
+  position: absolute;
+  right: -20px;
+  bottom: -100px;
+  width: 200px;
 }
