--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ nav {
   position: relative;
   background-color: var(--black-color);
   z-index: 10;
+  min-height: 100vh;
   margin-top: 100vh;
 }
 
@@ -171,9 +172,28 @@ nav {
 }
 
 .company_name {
-  margin-bottom: 12px;
+  margin-bottom: 24px;
 }
 
 .company_meaning {
-  margin: 12px 0 32px 0;
+  margin-top: 8px;
+}
+
+.company_message--container {
+  margin-top: 100px;
+  width: 100%;
+}
+
+.company_message {
+  margin-bottom: 32px;
+  line-height: 1.5rem;
+  font-weight: 100;
+}
+
+.about_section--circles {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
 }
